cabal-version:   3.0
name:            repro
version:         0.1.0.0
license:         NONE
author:          matthewtpickering@gmail.com
maintainer:      Matthew Pickering
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable repro
    import:           warnings
    main-is:          Main.hs
    other-modules: TH Type
    build-depends:    base, mono-traversable, template-haskell
    hs-source-dirs:   app
    ghc-options: -O2
    default-language: Haskell2010
